[gd_scene load_steps=9 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[sub_resource type="AudioStreamMicrophone" id=1]

[sub_resource type="Animation" id=2]
resource_name = "AB"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("PathA:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathB:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "AC"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("PathA:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathC:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "AD"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("PathA:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathD:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "BC"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("PathB:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathC:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "BD"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("PathB:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathD:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "CD"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("PathC:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathD:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Record"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "RecOut"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="PathA" type="AudioStreamPlayer" parent="."]
bus = "PathA"

[node name="PathB" type="AudioStreamPlayer" parent="."]
volume_db = -80.0
bus = "PathB"

[node name="PathC" type="AudioStreamPlayer" parent="."]
bus = "PathC"

[node name="PathD" type="AudioStreamPlayer" parent="."]
bus = "PathD"

[node name="PlayLetters" type="AudioStreamPlayer" parent="."]
bus = "Letters"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AB = SubResource( 2 )
anims/AC = SubResource( 3 )
anims/AD = SubResource( 4 )
anims/BC = SubResource( 5 )
anims/BD = SubResource( 6 )
anims/CD = SubResource( 7 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
